src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.dark\:underline:where([data-mode="dark"], [data-mode="dark"] *){
    text-decoration-line: underline
}

.main-container{
    max-width: 800px;
    margin: auto;
    padding: 30px;
}

.header-image {
    border-radius: 5px;
}
.react-pdf__Page__textContent {
    display: none;
  }
  
.resume {
    margin-top: 1.75em;
    color:#336cf2;
    font-size: 17px;
}

h2 {
    font-size: 20px;
    font-weight: bold;
    margin-bottom: 10px;
}

.role a {
    color: #336cf2;
}

.role a:hover {
    text-decoration: underline;
}

.resume:hover {
    text-decoration: underline;
}

footer {
    padding:25px 0;
}

.role {
    font-weight: 600;
}

ul li {
    display: flex;
    font-size: 17px;
    margin-bottom: 10px;
}

.date {
    font-family: 'Courier New';
    min-width: 150px;
    text-align: left;
    font-size: 17px;
    margin-right: 20px;
}

.description {
    font-size: 15px;
    margin-bottom: 0px;
}

.technologies {
    font-size: 12px;
    font-style: italic;
}

ul li span {
    min-width: 150px;
    text-align: left;
    font-size: 17px;
    margin-right: 20px;
}

@media (max-width: 768px) {
    ul li {
        display: block;
        font-size: 15px;
        margin-bottom: 15px;
    }

    .content {
        display: block;
    }

    .resume {
        color: #336cf2;
        font-size: 15px;
    }

    li p {
        font-size: 15px;
    }
}


p {
    margin-bottom: 15px;
    font-size: 17px;
    color: rgb(65, 65, 65);
}

h1 {
    font-size: 30px;
    font-weight: bold;
    margin-bottom: 10px;
}

h1:hover {
    color:#336cf2
}

img {
    margin-bottom: 10px;
    width: 800px;
}


nav {
    margin-bottom: 20px;
    font-size: 20px;
}

nav ol {
    display: flex;
    margin: 0;
    padding: 0;
}

nav ol li {
    margin-right: 15px;
    color: #336cf2;
}

nav ol li:last-child {
    margin-right: 0;
}

nav ol li:hover {
    text-decoration: underline;
}

footer {
    margin-top: 20px;
    font-size: 15px;
}

footer p a {
    font-weight: bold;
    margin-left: 6px;
    color: #336cf2;
}

footer p a:hover {
    text-decoration: underline;
}


.time {
    font-family: var(--body-font);
    font-size: 12px;
    color: #4f4f4f;
    opacity: 0.5;
    font-weight: 400;
    transition: opacity 0.3s ease;
    position: absolute;
    right: 0;
    top: 50%;
    transform: translateY(-50%);
    width: auto;
    text-align: right;
}


.experience:hover .time {
    opacity: 1;
}


.experience {
    display: flex;
    align-items: flex-start;
    margin-top: 1em;
    position: relative;
    padding-right: 7em;
}

.experience img {
    width: 2.5em;
    height: 2.5em;
    margin-right: 1em;
    margin-top: 4px;
    border-radius: 5px;
}
.experience div {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.experience h2 {
    color: var(--text-dark);
    font-size: 1em;
    margin: 0;
}

.experience p {
    font-size: 1em;
    color: var(--text-light);
    margin: 0;
}
/* 
.card{
    border: 1px solid rgb(0, 0, 0);
    box-shadow: 5px 5px 5px black;
    border-radius: 10px;
}

 */

